== 1.2.8 (in development)

== 1.2.7.2 (2010-03-05)

=== Minor Changes
* Number of masked smells is no longer shown in report headers
* Masked smells are no longer listed in --yaml reports
* DataClump no longer needs infinite memory for large classes (#57)
* DataClump reports the names of the offending methods in the YAML report
* UncommunicativeMethodName now accepts operator names (+, -, ...)
* Uncommunicative Name now warns about uppercase letters in method & var names

== 1.2.7.1 (2010-02-03)

=== Minor Changes
* Fixed crash on a case statement with no condition (#58)

== 1.2.7 (2010-02-01)

=== Major Changes
* New option --yaml reports smells in YAML format
* Now require 'reek/rake/task' to use the rake task
* Now require 'reek/spec' to use the Rspec matchers
* Developer API completely revised and documented

=== Minor Changes
* New smell: Irresponsible Module (has no meaningful comment)
* ControlCouple no longer checks arguments yielded to blocks
* FeatureEnvy and UtilityFunction are now subclasses of a new smell: LowCohesion
* NestedIterators now reports the nesting depth
* Fixed problem checking for UtilityFunctions in Object
* Improved detection of invalid config files
* Invalid config files are now ignored
* Non-existent files are now ignored

See http://wiki.github.com/kevinrutherford/reek for further details.

== 1.2.6 (2009-11-28)

=== Minor Changes
* Corrected display of module methods to use # (#56)

== 1.2.5 (2009-11-19)

=== Minor Changes
* Ignores ruby_parser errors and pretends the offending file was empty

== 1.2.4 (2009-11-17)

=== Major Changes
* The -f, -c and -s options for formatting smell warnings have been removed

=== Minor Changes
* ControlCouple now warns about parameters defaulted to true/false

== 1.2.3 (2009-11-2)

=== Minor Changes
* New smell: Attribute (disabled by default)
* Expanded DataClump to check modules (#9)
* Fixed LargeClass to ignore inner classes and modules
* Fixed LargeClass to ignore singleton methods