@@ -1,5 +1,8 @@
 == 1.2.8 (in development)
 
+=== Minor Changes
+* UtilityFunction no longer reported when local method called in param initializer (#60)
+
 == 1.2.7.2 (2010-03-05)
 
 === Minor Changes
